deploy-kubectl/deployment-kubernetes-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-app
  namespace: ${namespace} 
  labels:
    app: kubernetes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-app
  template:
    metadata:
      labels:
        app: kubernetes-app
    spec:
      containers:
      - name: kubernetes-app
        image: dmatt/hello_kube:v1.2
        ports:
        - containerPort: 8000
