deploy-kubectl/service-kubernetes-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-app
  namespace: ${namespace} 
  labels:
    app: kubernetes-app
spec:
  type: ClusterIP 
  ports:
  - port: 8000 
    protocol: TCP
    name: web
  selector:
    app: kubernetes-app
