deploy-kubectl/ingress-kubernetes-app.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/auth-type: basic
#    nginx.ingress.kubernetes.io/auth-secret: basic-auth
  name: kubernetes-app 
  namespace: ${namespace} 
spec:
  rules:
  - http:
      paths:
      - path: /kubectl
        backend:
          serviceName: kubernetes-app
          servicePort: 8000
